@@ -22,7 +22,6 @@ extern double MI[NUM_TRI_TYPES];
 
 void main_search(seq_t dna, t_params params, t_penalization pen, int pbw);
 double p_function(int score, int tri_type);
-double e_value(int score, int tri_type);
-double p_value(int score, int tri_type);
+double p_value(int score, int tri_type, int seq_len);
 
 #endif // SEARCH_H
